Bug 247733 - RemoteAudioDestinationManager::AudioSamplesStorageChanged sends redundant stream description
Summary: RemoteAudioDestinationManager::AudioSamplesStorageChanged sends redundant str...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-10 07:48 PST by Kimmo Kinnunen
Modified: 2022-11-15 02:39 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2022-11-10 07:48:20 PST
RemoteAudioDestinationManager::AudioSamplesStorageChanged sends redundant stream description

The stream must be exactly as RemoteAudioDestination audio output unit adaptor needs, the sender cannot configure anything related to it.
Comment 1 Radar WebKit Bug Importer 2022-11-10 07:49:18 PST
<rdar://problem/102193653>
Comment 2 Kimmo Kinnunen 2022-11-10 07:54:06 PST
Pull request: https://github.com/WebKit/WebKit/pull/6348
Comment 3 EWS 2022-11-15 02:39:49 PST
Committed 256687@main (ce051f767fb9): <https://commits.webkit.org/256687@main>

Reviewed commits have been landed. Closing PR #6348 and removing active labels.