RemoteAudioDestinationManager::AudioSamplesStorageChanged sends redundant stream description https://bugs.webkit.org/show_bug.cgi?id=247733 rdar://problem/102193653

Reviewed by Youenn Fablet.

The stream must be exactly as RemoteAudioDestination audio output unit adaptor needs,
the sender cannot configure anything related to it.

Remove the parameter.

In later patches, the ring buffer can be obtained via the constructor and as such
the added member variable m_numChannelStreams can be removed.

* Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp:
(WebKit::RemoteAudioDestinationManager::audioSamplesStorageChanged):
* Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.h:
* Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.messages.in:
* Source/WebKit/Shared/Cocoa/SharedCARingBuffer.cpp:
(WebKit::ConsumerSharedCARingBuffer::map):
* Source/WebKit/Shared/Cocoa/SharedCARingBuffer.h:
* Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp:
(WebKit::RemoteAudioDestinationProxy::connection):

Canonical link: https://commits.webkit.org/256687@main